--- a/index.html
+++ b/index.html
@@ -4,42 +4,32 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>18.1</title>
-  <!-- <link rel="stylesheet" href="css/style_2.css"> -->
-  <link rel="stylesheet" href="css/style_9.css">
-  <!-- <script src="18_1.js" defer></script> -->
-  <!-- <script src="18_2.js" defer></script> -->
-  <!-- <script src="18_3.js" defer></script> -->
-  <!-- <script src="18_4.js" defer></script> -->
-  <!-- <script src="18_5.js" defer></script> -->
-  <!-- <script src="18_6.js" defer></script> -->
-  <!-- <script src="18_7.js" defer></script> -->
-  <!-- <script src="18_8.js" defer></script> -->
-  <script src="18_9.js" defer></script>
+  <title>19</title>
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-  <!-- <p class="axic" style="margin: 30px;">X: Y:</p> 1task -->
-  <!-- <p style="margin: 30px;">Нажмите на любое место.</p>
-  <div></div> 2task -->
-  <!-- <p style="margin: 30px;">Нажмите на любое место.</p>
-  <div></div> 3task-->
-  <!-- <input type="text" />
-  <p>Код нажатой клавиши: </p> 4task-->
-  <!-- <input type="text" />
-  <p>Нажатая клавиша: </p> 5task-->
-  <!-- <div style="margin: 200px auto; border: 1px solid blue; width: 100px; height: 100px;"></div> 6task-->
-  <!-- <div id="colorContainer" style="margin: 200px auto; border: 4px solid rgb(92, 0, 128); width: 100px; height: 100px;"></div> 7task-->
-  <!-- <input style="margin: 50px 200px;" type="button" value="GO IT!" />
-  <div style="margin: 50px 200px; background-color: red; width: 100px; height: 100px"></div> 8task-->
-  <div class="container">
-    <div class="contentTriagle">
-      <div id="triangle"></div>
+  <section class="heading">
+    <div class="container">
+      <h1>Heading</h1>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita amet iusto ipsam, magni excepturi autem labore nemo in possimus dignissimos perspiciatis ipsa consequuntur ratione numquam deserunt magnam, inventore provident, dolore voluptatibus quibusdam reiciendis. Nisi asperiores ex fugiat ad. Eligendi voluptates alias dolor rerum quis rem nisi temporibus provident ab, nobis quaerat repellat deserunt ea illum laborum?</p>
+      <button class="btnHeading" id="btnCall">Заказать звонок</button>
     </div>
-    <ul> Сладости(нажми меня)!
-      <li>Пирожное</li>
-      <li>Пончик</li>
-      <li>Мёд</li>
-    </ul>
+  </section>
+  <section class="main">
+    <div class="container">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus illo corporis totam magni, similique non aut at facilis reiciendis quae maiores doloribus delectus nihil dignissimos rem laboriosam voluptatem repudiandae dolorum ipsum dolore beatae fuga, quidem eos vitae! Optio nam numquam obcaecati maxime ex quasi at temporibus porro, rem consectetur magni dolor, quis, aliquid id. Rem facere nam magnam, nisi, commodi iste fuga eveniet corporis doloremque ea repellat distinctio eos quisquam. Eligendi blanditiis aliquid possimus, ea nesciunt ad, nemo, culpa dignissimos unde commodi facilis doloremque nobis natus dolore temporibus? Mollitia culpa facere aliquam minima sapiente eos sint. Perspiciatis, numquam ullam. Quia, aspernatur! Sequi eos illo nulla placeat dolorum nesciunt fuga rem dolor sapiente officia magni consequatur voluptatibus enim libero ea amet, repellat fugiat minima. Laboriosam deserunt tempore assumenda, numquam neque fuga eum error quos laborum, iste fugiat velit eius veritatis repellendus possimus. Dolorum iusto aliquam architecto ducimus cum, quis veritatis, ut sed, fuga animi nesciunt. Explicabo quidem, iusto facilis maiores quia et, modi rerum illo maxime qui pariatur non tempore. Laboriosam exercitationem tenetur obcaecati? Dignissimos, sapiente ex assumenda eum dolore amet nesciunt veniam, molestiae quasi dolor corporis fugiat animi laudantium ipsum vel cum. Doloribus, ad, laboriosam consequuntur quam placeat sequi ipsa hic reiciendis molestiae est voluptatibus, soluta enim maxime non odit aliquid illum iusto quaerat! Nostrum, illum ipsum ea labore maiores velit facilis nam veritatis delectus corporis exercitationem dolorum officiis dolore, temporibus odio eum voluptates? Delectus, tempore cupiditate possimus facilis deserunt eum nisi dolores corporis maiores consectetur maxime vel, similique impedit placeat repudiandae perferendis repellendus fuga earum excepturi ex amet quasi iste totam eveniet. Rerum perspiciatis qui voluptatibus officia perferendis dolorem facere totam quae, quo cupiditate illum quaerat nobis soluta ut aspernatur ex maiores eum temporibus! Ipsam laborum harum ducimus enim fuga, sit maxime, quia omnis eos fugit saepe. Dolorem, rerum.</p>
+    </div>
+  </section>
+  <div class="popup" id="popup">
+    <div class="contentPopup" id="contentPopup">
+      <h2>Заголовок модального окна</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, possimus dolorum enim architecto, blanditiis sequi, voluptatem quidem adipisci quis ad modi. Et vel ab dolore, omnis accusamus asperiores officiis accusantium ipsam deleniti saepe explicabo. Fuga modi beatae quidem quo nostrum non, officia, aliquid praesentium voluptas sit eum maiores nemo sequi.</p>
+      <button class="btnPopup" id="btnPopup">X</button>
+    </div>
   </div>
+  <!-- <script src="19_1.js"></script> -->
+  <!-- <script src="19_2.js"></script> -->
+  <!-- <script src="19_3.js"></script> -->
+  <script src="19_4.js"></script>
 </body>
 </html>
