--- a/index.html
+++ b/index.html
@@ -1,35 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>19</title>
-  <link rel="stylesheet" href="styles/style.css">
+  <title>20&nbsp;Site</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
+  <script src="script/script.js" defer></script>
 </head>
+
 <body>
-  <section class="heading">
+  <article class="title">
     <div class="container">
-      <h1>Heading</h1>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita amet iusto ipsam, magni excepturi autem labore nemo in possimus dignissimos perspiciatis ipsa consequuntur ratione numquam deserunt magnam, inventore provident, dolore voluptatibus quibusdam reiciendis. Nisi asperiores ex fugiat ad. Eligendi voluptates alias dolor rerum quis rem nisi temporibus provident ab, nobis quaerat repellat deserunt ea illum laborum?</p>
-      <button class="btnHeading" id="btnCall">Заказать звонок</button>
+      <nav id="navTitle">
+        <img id="leftNav" src="" alt="logo">
+        <div id="rightNav">
+          <ul>
+            <li><a href="#">Skills</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Video</a></li>
+            <li><a href="#">Price</a></li>
+            <li><a href="#">Contacts</a></li>
+          </ul>
+          <p id="changeLangEn">en&nbsp;</p>
+          <p>&#47;</p>
+          <p id="changeLangRu">&nbsp;ru</p>
+          <img id="hamburgerMenu" src="" alt="hamburger">
+        </div>
+      </nav>
+      <div class="titleContent">
+        <h1>Alexa Rise</h1>
+        <p id="mainTitleContent">Save sincere emotions, romantic feelings and happy moments of life together with professional photographer
+          Alexa Rise</p>
+        <button id="btnHireMe">Hire me</button>
+      </div>
     </div>
-  </section>
-  <section class="main">
+  </article>
+
+  <article class="portfolio">
     <div class="container">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus illo corporis totam magni, similique non aut at facilis reiciendis quae maiores doloribus delectus nihil dignissimos rem laboriosam voluptatem repudiandae dolorum ipsum dolore beatae fuga, quidem eos vitae! Optio nam numquam obcaecati maxime ex quasi at temporibus porro, rem consectetur magni dolor, quis, aliquid id. Rem facere nam magnam, nisi, commodi iste fuga eveniet corporis doloremque ea repellat distinctio eos quisquam. Eligendi blanditiis aliquid possimus, ea nesciunt ad, nemo, culpa dignissimos unde commodi facilis doloremque nobis natus dolore temporibus? Mollitia culpa facere aliquam minima sapiente eos sint. Perspiciatis, numquam ullam. Quia, aspernatur! Sequi eos illo nulla placeat dolorum nesciunt fuga rem dolor sapiente officia magni consequatur voluptatibus enim libero ea amet, repellat fugiat minima. Laboriosam deserunt tempore assumenda, numquam neque fuga eum error quos laborum, iste fugiat velit eius veritatis repellendus possimus. Dolorum iusto aliquam architecto ducimus cum, quis veritatis, ut sed, fuga animi nesciunt. Explicabo quidem, iusto facilis maiores quia et, modi rerum illo maxime qui pariatur non tempore. Laboriosam exercitationem tenetur obcaecati? Dignissimos, sapiente ex assumenda eum dolore amet nesciunt veniam, molestiae quasi dolor corporis fugiat animi laudantium ipsum vel cum. Doloribus, ad, laboriosam consequuntur quam placeat sequi ipsa hic reiciendis molestiae est voluptatibus, soluta enim maxime non odit aliquid illum iusto quaerat! Nostrum, illum ipsum ea labore maiores velit facilis nam veritatis delectus corporis exercitationem dolorum officiis dolore, temporibus odio eum voluptates? Delectus, tempore cupiditate possimus facilis deserunt eum nisi dolores corporis maiores consectetur maxime vel, similique impedit placeat repudiandae perferendis repellendus fuga earum excepturi ex amet quasi iste totam eveniet. Rerum perspiciatis qui voluptatibus officia perferendis dolorem facere totam quae, quo cupiditate illum quaerat nobis soluta ut aspernatur ex maiores eum temporibus! Ipsam laborum harum ducimus enim fuga, sit maxime, quia omnis eos fugit saepe. Dolorem, rerum.</p>
-    </div>
-  </section>
-  <div class="popup" id="popup">
-    <div class="contentPopup" id="contentPopup">
-      <h2>Заголовок модального окна</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, possimus dolorum enim architecto, blanditiis sequi, voluptatem quidem adipisci quis ad modi. Et vel ab dolore, omnis accusamus asperiores officiis accusantium ipsam deleniti saepe explicabo. Fuga modi beatae quidem quo nostrum non, officia, aliquid praesentium voluptas sit eum maiores nemo sequi.</p>
-      <button class="btnPopup" id="btnPopup">X</button>
+      <div class="wrapperTextMainPortfolio">
+        <hr /><h1 class="textMainPortfolio">Portfolio</h1><hr />
+      </div>
+      <div class="buttonsPortfolio">
+        <button>Winter</button><button>Spring</button><button>Summer</button><button>Autumn</button>
+      </div>
+     
+      <div class="wrapperImages" id="wrapperImages">
+        <img class="imgPortfolio" src="images/portfolio/portfolio-img-1.png" alt="portfolio-img-1">
+        <img class="imgPortfolio" src="images/portfolio/portfolio-img-2.png" alt="portfolio-img-2">
+        <img class="imgPortfolio" src="images/portfolio/portfolio-img-3.png" alt="portfolio-img-3">
+        <img class="imgPortfolio" src="images/portfolio/portfolio-img-4.png" alt="portfolio-img-4">
+        <img class="imgPortfolio" src="images/portfolio/portfolio-img-5.png" alt="portfolio-img-5">
+        <img class="imgPortfolio" src="images/portfolio/portfolio-img-6.png" alt="portfolio-img-6">
+      </div>
+
+      <!-- <div class="test">
+        <p class="testText">ff</p>
+        <p class="testText">ff</p>
+        <p class="testText">ff</p>
+        <p class="testText">ff</p>
+      </div> -->
+  </article>
+  <div class="wrapperContact " id="wrapperContact">
+    <div class='contentContact'>
+      <h1 class="textContact">Contact me</h1>
+      <form action="">
+        <div id="containerEmail"> 
+          <input id="email" type="email" placeholder="E-mail"/>
+         </div>
+        <div id="containerTel">
+          <input type="tel" id="tel" placeholder="Phone" pattern="2[0-9]{3}-[0-9]{3}" />
+        </div>
+        <div id="containerMessage">
+          <input type="text" id="message" placeholder="Message" />
+        </div>
+        <button id='btnSubmit' type="submit">Send message</button>
+      </form>
     </div>
   </div>
-  <!-- <script src="19_1.js"></script> -->
-  <!-- <script src="19_2.js"></script> -->
-  <!-- <script src="19_3.js"></script> -->
-  <script src="19_4.js"></script>
+  <div class="burgerMenu" id="burgerMenu">
+    <img class="closeBurgerMenu" id="closeBurgerMenu" src="" alt="">
+    <ul>
+      <li><a href="#">Skills</a></li>
+      <li><a href="#">Portfolio</a></li>
+      <li><a href="#">Video</a></li>
+      <li><a href="#">Price</a></li>
+      <li><a href="#">Contacts</a></li>
+    </ul>
+  </div>
+  <div class="wrapperImagesBig" id="wrapperImagesBig">
+    <img class="img" id="img" src="" alt="">
+  </div>
 </body>
+
 </html>
